--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <!-- Navigation -->
   <nav class="nav">
-    <div class="nav-logo">Ana ✦ Jiuliani</div>
+    <div class="nav-logo">Ana Jiuliani</div>
     <div class="nav-links">
       <a href="index.html">Home</a>
       <a href="tracks.html">Tracks</a>
