--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ana Jiuliani - Sign Up</title>
 <link rel="stylesheet" href="style.css">
+
+<!-- ConvertKit Script -->
+<script src="https://f.convertkit.com/ckjs/ck.5.js"></script>
+
 </head>
 <body>
 
@@ -16,11 +20,36 @@
 
 <div class="header">Join ✦ The Fan Club</div>
 
-<form>
-  <input type="text" placeholder="Your Name" required>
-  <input type="email" placeholder="Your Email" required>
-  <button type="submit">Sign Up</button>
-</form>
+<!-- ConvertKit Form -->
+<div class="newsletter-wrapper">
+  <form action="https://app.kit.com/forms/8965932/subscriptions" 
+        class="seva-form formkit-form" 
+        method="post" 
+        data-sv-form="8965932" 
+        data-uid="4ba1d00926" 
+        data-format="inline" 
+        data-version="5">
+
+    <ul class="formkit-alert formkit-alert-error" data-element="errors" data-group="alert"></ul>
+
+    <div data-element="fields" class="seva-fields formkit-fields">
+      <div class="formkit-field">
+        <input class="formkit-input" name="first_name" type="text" placeholder="Your Name" required>
+      </div>
+      <div class="formkit-field">
+        <input class="formkit-input" name="email_address" type="email" placeholder="Your Email" required>
+      </div>
+
+      <button data-element="submit" class="formkit-submit">
+        <span>Sign Up</span>
+      </button>
+    </div>
+
+    <div class="formkit-disclaimer">
+      We respect your privacy. Unsubscribe anytime.
+    </div>
+  </form>
+</div>
 
 <footer>© 2026 Ana Jiuliani</footer>
 
