--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
 <div class="header">Join ✦ The Fan Club</div>
 
 <!-- ConvertKit Form Embed -->
-<form action="https://app.convertkit.com/forms/YOUR_FORM_ID/subscriptions" method="post" class="my-convertkit-form">
+<form action="https://app.kit.com/forms/8966023/subscriptions" method="post" class="my-convertkit-form">
   <input type="text" name="first_name" placeholder="Your Name" required>
   <input type="email" name="email_address" placeholder="Your Email" required>
   <button type="submit">Sign Up</button>
