--- a/signup.html
+++ b/signup.html
@@ -19,11 +19,12 @@
 <div class="header">Join ✦ The Fan Club</div>
 
 <!-- ConvertKit Form Embed -->
-<form action="https://app.kit.com/forms/8966023/subscriptions" method="post" class="my-convertkit-form">
+<form class="seva-form" data-sv-form="8966023" data-uid="8966023" method="post" action="https://app.convertkit.com/forms/8966023/subscriptions">
   <input type="text" name="first_name" placeholder="Your Name" required>
   <input type="email" name="email_address" placeholder="Your Email" required>
   <button type="submit">Sign Up</button>
 </form>
+<script src="https://f.convertkit.com/ckjs/ck.5.js" async></script>
 
 <footer>© 2026 Ana Jiuliani</footer>
 
