--- a/tracks.html
+++ b/tracks.html
@@ -14,7 +14,7 @@
   <a href="signup.html">Sign Up</a>
 </nav>
 
-<div class="header">Tracks ✦ Ana Jiuliani</div>
+<div class="header">Tracks</div>
 
 <div class="track-list">
   <div>"City Lights"</div>
