--- a/tracks.html
+++ b/tracks.html
@@ -25,7 +25,7 @@
   <div>"Soft Blush Mornings"</div>
 </div>
 
-<footer>© 2026 Ana Jiuliani</footer>
+<footer>© 2026 Ana Jiuliani. All Rights Reserved.</footer>
 
 </body>
 </html>
