--- a/tracks.html
+++ b/tracks.html
@@ -25,8 +25,9 @@
   <div>"Soft Blush Mornings"</div>
 </div>
 
-<footer>© 2026 Ana Jiuliani. All Rights Reserved.</p>
-</footer>
+ <footer>
+    <p>&copy; 2026 Ana Jiuliani. All Rights Reserved.</p>
+  </footer>
 
 </body>
 </html>
