--- a/signup.html
+++ b/signup.html
@@ -26,7 +26,9 @@
 </form>
 <script src="https://f.convertkit.com/ckjs/ck.5.js" async></script>
 
-<footer>© 2026 Ana Jiuliani. All Rights Reserved.</footer>
+ <footer>
+    <p>&copy; 2026 Ana Jiuliani. All Rights Reserved.</p>
+  </footer>
 
 </body>
 </html>
