--- a/index.html
+++ b/index.html
@@ -1,89 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ana Jiuliani - Home</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<title>Ana Jiuliani — Official</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link rel="icon" type="image/png" href="favicon.png">
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <!-- Navigation -->
-  <nav class="nav">
-    <div class="nav-logo">Ana Jiuliani</div>
-    <div class="nav-links">
-      <a href="index.html">Home</a>
-      <a href="tracks.html">Tracks</a>
-      <a href="signup.html">Sign Up</a>
-    </div>
+
+<header class="masthead">
+  <h1 class="logo">Ana ✶ Jiuliani</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="tracks.html">Tracks</a>
+    <a href="video.html">Video</a>
+    <a href="shop.html">Shop</a>
   </nav>
+</header>
 
-  <!-- Header Hero -->
-  <header class="hero">
-    <h1 class="hero-title">Ana Jiuliani</h1>
-    <p class="hero-subtitle">Pop Singer & Songwriter | News, Tracks & Updates</p>
-    <img src="526a23c1-c446-4828-ac6d-1d7965d6f329.png" alt="Ana Jiuliani" class="hero-image">
-  </header>
+<section class="hero ripped">
+  <div class="hero-text">
+    <h2>New Release</h2>
+    <p class="handwritten">
+      a love letter printed too late
+    </p>
+  </div>
+</section>
 
-  <!-- Latest News Section -->
-  <section class="news-section">
-    <h2>Latest News</h2>
-    <div class="news-cards">
-      <article class="news-card">
-        <h3>New Single Released!</h3>
-        <p>Check out my latest track “Moonlight Dreams” now available on all streaming platforms.</p>
-        <a href="tracks.html" class="btn">Listen Now</a>
-      </article>
-      <article class="news-card">
-        <h3>Upcoming NYC Show</h3>
-        <p>Mark your calendars! Live performance at Brooklyn’s Music Hall on Feb 20th.</p>
-        <a href="#" class="btn">Tickets</a>
-      </article>
-      <article class="news-card">
-        <h3>Behind the Scenes</h3>
-        <p>A sneak peek into the making of my new music video.</p>
-        <a href="#" class="btn">Read More</a>
-      </article>
-    </div>
-  </section>
+<section class="columns">
+  <article>
+    <h3>Editor’s Note</h3>
+    <p>
+      This paper documents longing, pop melodies, girlhood,
+      and the quiet violence of wanting more.
+    </p>
+  </article>
 
-  <!-- Featured Tracks -->
-  <section class="tracks-preview">
-    <h2>Featured Tracks</h2>
-    <div class="track-cards">
-      <div class="track-card">
-        <h4>Moonlight Dreams</h4>
-        <audio controls>
-          <source src="tracks/moonlight.mp3" type="audio/mpeg">
-          Your browser does not support the audio element.
-        </audio>
-      </div>
-      <div class="track-card">
-        <h4>City Lights</h4>
-        <audio controls>
-          <source src="tracks/citylights.mp3" type="audio/mpeg">
-          Your browser does not support the audio element.
-        </audio>
-      </div>
-    </div>
-  </section>
+  <article>
+    <h3>Subscribe</h3>
+    <p>Notes, demos & secrets.</p>
+    <a class="button" href="https://linktr.ee/anajiuliani?subscribe" target="_blank">
+      Join the list
+    </a>
+  </article>
 
-  <!-- Newsletter Signup -->
-  <section class="signup-section">
-    <h2>Join the Newsletter</h2>
-    <p>Get exclusive updates, behind-the-scenes stories, and early track releases.</p>
-    <form action="signup.html" class="signup-form">
-      <input type="email" placeholder="Enter your email" required>
-      <button type="submit">Subscribe</button>
-    </form>
-  </section>
+  <article>
+    <h3>Social Dispatch</h3>
+    <ul class="socials">
+      <li><a href="https://instagram.com/anajiuliani" target="_blank">Instagram</a></li>
+      <li><a href="https://tiktok.com/@anajiuliani" target="_blank">TikTok</a></li>
+      <li><a href="https://youtube.com" target="_blank">YouTube</a></li>
+      <li><a href="https://spotify.com" target="_blank">Spotify</a></li>
+    </ul>
+  </article>
+</section>
 
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2026 Ana Jiuliani. All Rights Reserved.</p>
-  </footer>
+<footer>
+  <p>© 2026 Ana Jiuliani. All Rights Reserved.</p>
+</footer>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
-
