--- a/tracks.html
+++ b/tracks.html
@@ -2,32 +2,31 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ana Jiuliani - Tracks</title>
+<title>Tracks — Ana Jiuliani</title>
 <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<nav>
-  <a href="index.html">Home</a>
-  <a href="tracks.html">Tracks</a>
-  <a href="signup.html">Sign Up</a>
-</nav>
+<header class="masthead">
+  <h1 class="logo">Tracks</h1>
+  <nav>
+    <a href="index.html">Home</a>
+  </nav>
+</header>
 
-<div class="header">Tracks</div>
+<section class="track-grid">
+  <a class="track" href="SMARTLINK_HERE" target="_blank">
+    <span>Track One</span>
+    <img src="images/album1.jpg" alt="">
+  </a>
 
-<div class="track-list">
-  <div>"City Lights"</div>
-  <div>"Midnight Whispers"</div>
-  <div>"Coffee in Heart"</div>
-  <div>"Vinyl Dreams"</div>
-  <div>"Hearts on Fire"</div>
-  <div>"Soft Blush Mornings"</div>
-</div>
-
- <footer>
-    <p>&copy; 2026 Ana Jiuliani. All Rights Reserved.</p>
-  </footer>
+  <a class="track" href="SMARTLINK_HERE" target="_blank">
+    <span>Track Two</span>
+    <img src="images/album2.jpg" alt="">
+  </a>
+</section>
 
 </body>
 </html>
+
