--- a/signup.html
+++ b/signup.html
@@ -1,35 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ana Jiuliani - Sign Up</title>
-<link rel="stylesheet" href="style.css">
-<!-- ConvertKit Script -->
-<script src="https://f.convertkit.com/ckjs/ck.5.js" async></script>
+  <meta charset="UTF-8">
+  <title>Subscribe — Ana Jiuliani</title>
+
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.png">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
 
-<nav>
-  <a href="index.html">Home</a>
-  <a href="tracks.html">Tracks</a>
-  <a href="signup.html">Sign Up</a>
-</nav>
+<body class="signup-page">
 
-<div class="header">Join ✦ The Fan Club</div>
+  <header class="paper-header">
+    <h1 class="masthead">THE ANA JIULIANI TIMES</h1>
+    <p class="subhead">Private letters, unreleased thoughts & first listens</p>
+  </header>
 
-<!-- ConvertKit Form Embed -->
-<form class="seva-form" data-sv-form="8966023" data-uid="8966023" method="post" action="https://app.convertkit.com/forms/8966023/subscriptions">
-  <input type="text" name="first_name" placeholder="Your Name" required>
-  <input type="email" name="email_address" placeholder="Your Email" required>
-  <button type="submit">Sign Up</button>
-</form>
-<script src="https://f.convertkit.com/ckjs/ck.5.js" async></script>
+  <main class="signup-container">
 
- <footer>
-    <p>&copy; 2026 Ana Jiuliani. All Rights Reserved.</p>
+    <h2 class="signup-title">Join the Inner Pages</h2>
+
+    <p class="signup-text">
+      A handwritten corner of the internet.  
+      Songs before they’re released.  
+      Notes I don’t post anywhere else.
+    </p>
+
+    <a
+      class="signup-button"
+      href="https://linktr.ee/anajiuliani?subscribe"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      Subscribe via Email
+    </a>
+
+    <p class="signup-footnote">
+      Delivered quietly. No spam. Just ink & heart.
+    </p>
+
+  </main>
+
+  <footer class="paper-footer">
+    <a href="index.html">← Back to Home</a>
   </footer>
 
 </body>
 </html>
-
