--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 <header class="masthead">
-  <h1 class="logo">Ana ✶ Jiuliani</h1>
+  <h1 class="logo">Ana Jiuliani</h1>
   <nav>
     <a href="index.html">Home</a>
     <a href="tracks.html">Tracks</a>
