--- a/video.html
+++ b/video.html
@@ -13,6 +13,11 @@
 
 <section class="center-note">
   <p class="handwritten">More to come.</p>
+
+  <a href="signup.html" class="paper-button">
+    Subscribe for updates
+  </a>
 </section>
+
 </body>
 </html>
