--- a/video.html
+++ b/video.html
@@ -8,7 +8,7 @@
 
 <body>
 <header class="masthead">
-  <h1 class="logo">Moving Pictures</h1>
+  <h1 class="logo">Music Videos</h1>
 </header>
 
 <section class="center-note">
