--- a/signup.html
+++ b/signup.html
@@ -15,7 +15,7 @@
 <body class="signup-page">
 
   <header class="paper-header">
-    <h1 class="masthead">THE ANA JIULIANI TIMES</h1>
+    <h1 class="masthead">The Inner Pages</h1>
     <p class="subhead">Private letters, unreleased thoughts & first listens</p>
   </header>
 
