--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
   <article>
     <h3>Editor’s Note</h3>
     <p>
-      This paper documents longing, pop melodies, girlhood,
-      and the quiet violence of wanting more.
+      Not all songs are released.
     </p>
   </article>
 
