--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Ana Jiuliani — Official</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="icon" type="image/png" href="favicon.png">
+<link rel="icon" type="image/png" href="images/favicon.png">
 <link rel="stylesheet" href="style.css">
 </head>
 
