--- a/index.html
+++ b/index.html
@@ -49,10 +49,13 @@
   <article>
     <h3>Social Dispatch</h3>
     <ul class="socials">
-      <li><a href="https://instagram.com/anajiuliani" target="_blank">Instagram</a></li>
-      <li><a href="https://tiktok.com/@anajiuliani" target="_blank">TikTok</a></li>
-      <li><a href="https://youtube.com" target="_blank">YouTube</a></li>
-      <li><a href="https://spotify.com" target="_blank">Spotify</a></li>
+     <div class="socials">
+  <a href="https://instagram.com/anajiuliani" target="_blank">Instagram</a>
+  <a href="https://tiktok.com/@anajiuliani" target="_blank">TikTok</a>
+  <a href="https://twitter.com/anajiuliani" target="_blank">X</a>
+  <a href="https://youtube.com/@anajiuliani" target="_blank">YouTube</a>
+</div>
+
     </ul>
   </article>
 </section>
