--- a/shop.html
+++ b/shop.html
@@ -7,8 +7,9 @@
 </head>
 
 <body>
-<section class="center-note">
-  <h2>Shop</h2>
+  <header class="masthead">
+  <h1 class="logo">Shop</h1>
+  <nav>
   <p class="handwritten">More soon.</p>
 </section>
 </body>
