--- a/shop.html
+++ b/shop.html
@@ -10,7 +10,8 @@
   <header class="masthead">
   <h1 class="logo">Shop</h1>
   <nav>
-  <p class="handwritten">More soon.</p>
+    <section class="center-note">
+  <p class="handwritten">More to come.</p>
 </section>
 </body>
 </html>
