--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,7 @@
 <body>
   <header class="masthead">
   <h1 class="logo">Shop</h1>
-  <nav>
+  <header>
     <section class="center-note">
   <p class="handwritten">More to come.</p>
 </section>
