--- a/tracks.html
+++ b/tracks.html
@@ -19,12 +19,13 @@
 <section class="track-grid">
   <a class="track" href="SMARTLINK_HERE" target="_blank">
     <span>Track One</span>
-    <img src="images/album1.jpg" alt="">
+    <img src="images/album1.jpg" alt="Track One album cover">
+    
   </a>
 
   <a class="track" href="SMARTLINK_HERE" target="_blank">
     <span>Track Two</span>
-    <img src="images/album2.jpg" alt="">
+    <img src="images/album2.jpg" alt="Track Two album cover">
   </a>
 </section>
 
