--- a/tracks.html
+++ b/tracks.html
@@ -11,9 +11,12 @@
 
 <header class="masthead">
   <h1 class="logo">Tracks</h1>
-  <nav>
-    <a href="index.html">Home</a>
-  </nav>
+ <nav>
+  <a href="index.html">Home</a>
+  <a href="tracks.html">Tracks</a>
+  <a href="video.html">Video</a>
+  <a href="shop.html">Shop</a>
+</nav>
 </header>
 
 <section class="track-grid">
