--- a/shop.html
+++ b/shop.html
@@ -8,11 +8,13 @@
 </head>
 
 <body>
-  <header class="masthead">
+<header class="masthead">
   <h1 class="logo">Shop</h1>
-  <header>
-    <section class="center-note">
+</header>
+
+<section class="center-note">
   <p class="handwritten">More to come.</p>
+
 </section>
 </body>
 </html>
