--- a/video.html
+++ b/video.html
@@ -19,6 +19,8 @@
     Subscribe for updates
   </a>
 </section>
-
+<footer>
+  <p>© 2026 Ana Jiuliani. All Rights Reserved.</p>
+</footer>
 </body>
 </html>
