--- a/shop.html
+++ b/shop.html
@@ -16,5 +16,10 @@
   <p class="handwritten">More to come.</p>
 
 </section>
+
+  <footer>
+  <p>© 2026 Ana Jiuliani. All Rights Reserved.</p>
+</footer>
+
 </body>
 </html>
