--- a/index.html
+++ b/index.html
@@ -23,12 +23,24 @@
 
 <section class="hero ripped">
   <div class="hero-text">
+
     <h2>New Release</h2>
+
+    <a href="SMARTLINK_HERE" target="_blank" class="album-link">
+      <img 
+        src="images/album-cover.jpg" 
+        alt="Album cover — a love letter printed too late"
+        class="album-cover"
+      >
+    </a>
+
     <p class="handwritten">
       a love letter printed too late
     </p>
+
   </div>
 </section>
+
 
 <section class="columns">
   <article>
