--- a/index.html
+++ b/index.html
@@ -24,22 +24,24 @@
 <section class="hero ripped">
   <div class="hero-text">
 
-    <h2>New Release</h2>
+    <h2 class="release-title">New Release</h2>
 
     <a href="SMARTLINK_HERE" target="_blank" class="album-link">
-      <img 
-        src="images/album-cover.jpg" 
-        alt="Album cover — a love letter printed too late"
-        class="album-cover"
-      >
+      <div class="album-wrapper">
+        <img 
+          src="images/album-cover.jpg" 
+          alt="Album cover — a love letter printed too late"
+          class="album-cover"
+        >
+        <span class="album-name handwritten">
+          a love letter printed too late
+        </span>
+      </div>
     </a>
-
-    <p class="handwritten">
-      a love letter printed too late
-    </p>
 
   </div>
 </section>
+
 
 
 <section class="columns">
