--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
 <section class="hero ripped">
   <div class="hero-text">
 
-    <h2 class="release-title">New Release</h2>
+    <h2>New Release</h2>
 
     <a href="SMARTLINK_HERE" target="_blank" class="album-link">
-      <div class="album-wrapper">
-        <img 
-          src="images/album-cover.jpg" 
-          alt="Album cover — a love letter printed too late"
-          class="album-cover"
-        >
-        <span class="album-name handwritten">
-          a love letter printed too late
-        </span>
-      </div>
+      <img 
+        src="images/album-cover.jpg" 
+        alt="Album cover — a love letter printed too late"
+        class="album-cover"
+      >
     </a>
+
+    <p class="handwritten">
+      a love letter printed too late
+    </p>
 
   </div>
 </section>
+
 
 
 
