--- a/index.html
+++ b/index.html
@@ -24,22 +24,27 @@
 <section class="hero ripped">
   <div class="hero-text">
 
-    <h2>New Release</h2>
+    <h2 class="release-title">New Release</h2>
 
     <a href="SMARTLINK_HERE" target="_blank" class="album-link">
-      <img 
-        src="images/album-cover.jpg" 
-        alt="Album cover — a love letter printed too late"
-        class="album-cover"
-      >
-    </a>
+      <div class="album-wrapper">
+        <img 
+          src="images/album-cover.jpg" 
+          alt="Album cover"
+          class="album-cover"
+        >
 
-    <p class="handwritten">
-      a love letter printed too late
-    </p>
+        <img 
+          src="images/album-title.png" 
+          alt="Album title"
+          class="album-title-image"
+        >
+      </div>
+    </a>
 
   </div>
 </section>
+
 
 
 
