--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
   <article>
     <h3>Subscribe</h3>
     <p>Notes, demos & secrets.</p>
-    <a class="button" href="https://linktr.ee/anajiuliani?subscribe" target="_blank">
-      Join the list
-    </a>
+    <a href="signup.html" class="paper-button">
+    Join the list
+  </a>
   </article>
 
   <article>
