--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <article>
     <h3>Editor’s Note</h3>
     <p>
-      Not all songs are released.
+      When did “no expectations” become the biggest expectation of all?
     </p>
   </article>
 
