--- a/video.html
+++ b/video.html
@@ -10,6 +10,11 @@
 <body>
 <header class="masthead">
   <h1 class="logo">Music Videos</h1>
+
+  <nav>
+    <nav>
+  <a href="index.html">Home</a>
+  </nav>
 </header>
 
 <section class="center-note">
