--- a/tracks.html
+++ b/tracks.html
@@ -15,7 +15,7 @@
  <nav>
   <a href="index.html">Home</a>
   <a href="tracks.html">Tracks</a>
-  <a href="video.html">Video</a>
+  <a href="video.html">Videos</a>
   <a href="shop.html">Shop</a>
 </nav>
 </header>
