--- a/video.html
+++ b/video.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Video — Ana Jiuliani</title>
 <link rel="stylesheet" href="style.css">
-<link rel="icon" type="image/png" href="favicon.png">
+<link rel="icon" href="images/favicon.png">
 </head>
 
 <body>
