--- a/tracks.html
+++ b/tracks.html
@@ -5,7 +5,8 @@
 <meta charset="UTF-8">
 <title>Tracks — Ana Jiuliani</title>
 <link rel="stylesheet" href="style.css">
-<link rel="icon" href="images/favicon.png">
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.png">
 </head>
 
 <body>
