--- a/video.html
+++ b/video.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <title>Video — Ana Jiuliani</title>
 <link rel="stylesheet" href="style.css">
-<link rel="icon" href="images/favicon.png">
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.png">
 </head>
 
 <body>
