--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </nav>
 </header>
 
-<section class="hero ripped newspaper-bg">
+<section class="hero ripped">
   <div class="hero-text">
 
     <h2 class="release-title">New Release</h2>
