--- a/index.html
+++ b/index.html
@@ -27,19 +27,11 @@
     <h2 class="release-title">New Release</h2>
 
     <a href="SMARTLINK_HERE" target="_blank" class="album-link">
-      <div class="album-wrapper">
-        <img 
-          src="images/album-cover.jpg" 
-          alt="Album cover"
-          class="album-cover"
-        >
+     <div class="album-wrapper">
+  <img src="album.jpg" class="album-cover">
+  <div class="album-note">i made this</div>
+<div>
 
-        <img 
-          src="images/album-title.png" 
-          alt="Album title"
-          class="album-title-image"
-        >
-      </div>
     </a>
 
   </div>
