--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <a href="SMARTLINK_HERE" target="_blank" class="album-link">
      <div class="album-wrapper">
-  <img src="album.jpg" class="album-cover">
+  <img src="album-title.png" class="album-cover.png">
   <div class="album-note">i made this</div>
 <div>
 
