--- a/signup.html
+++ b/signup.html
@@ -2,51 +2,47 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Subscribe — Ana Jiuliani</title>
-
-  <link rel="stylesheet" href="style.css">
-
-  <!-- Favicon -->
-  <link rel="icon" href="images/favicon.png">
+  <title>Sometimes I Send Notes — Ana Jiuliani</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="images/favicon.png">
 </head>
 
 <body class="signup-page">
 
-  <header class="paper-header">
-    <h1 class="masthead">The Inner Pages</h1>
-    <p class="subhead">Private letters, unreleased thoughts & first listens</p>
-  </header>
+  <main class="signup-soft">
 
-  <main class="signup-container">
-
-    <h2 class="signup-title">Join the Inner Pages</h2>
+    <p class="signup-whisper">
+      sometimes i send notes
+    </p>
 
     <p class="signup-text">
-      A handwritten corner of the internet.  
-      Songs before they’re released.  
-      Notes I don’t post anywhere else.
+      unfinished songs, first listens,  
+      thoughts i don’t post,  
+      things that felt too quiet for anywhere else.
     </p>
 
     <a
-      class="signup-button"
+      class="signup-soft-button"
       href="https://linktr.ee/anajiuliani?subscribe"
       target="_blank"
       rel="noopener noreferrer"
     >
-      Subscribe via Email
+      leave your email ✦
     </a>
 
-    <p class="signup-footnote">
-     
+    <p class="signup-foot">
+      no schedule · no pressure · you can leave anytime
     </p>
+
+    <a class="signup-back" href="index.html">
+      ← back
+    </a>
 
   </main>
 
-  <footer class="paper-footer">
-    <a href="index.html">← Back to Home</a>
-  </footer>
-
 </body>
 </html>
+
