--- a/shop.html
+++ b/shop.html
@@ -1,28 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Shop — Ana Jiuliani</title>
-<link rel="stylesheet" href="style.css">
-  <!-- Favicon -->
-  <link rel="icon" href="images/favicon.png">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>Shop — Ana Jiuliani</title>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="images/favicon.png" />
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-<header class="masthead">
-  <h1 class="logo">Shop</h1>
-</header>
 
-<section class="center-note">
-  <p class="handwritten">More to come.</p>
+  <!-- ✦ HEADER -->
+  <header class="masthead">
+    <h1 class="logo">Shop</h1>
 
-</section>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="tracks.html">Music</a>
+      <a href="video.html">Video</a>
+    </nav>
+  </header>
 
-  <footer>
-  <p>© 2026 Ana Jiuliani. All Rights Reserved.</p>
-</footer>
+  <!-- ✦ SHOP SPACE -->
+  <section class="hero small-hero">
+    <div class="hero-text">
+
+      <p class="soft-text">
+        Things will appear here<br>
+        when they’re ready.
+      </p>
+
+      <span class="star">✦</span>
+
+      <p class="soft-text subtle">
+        Vinyl, paper, objects,<br>
+        pieces of time.
+      </p>
+
+    </div>
+  </section>
+
+  <!-- ✦ EMPTY BUT INTENTIONAL -->
+  <section class="columns single">
+
+    <article class="soft-block center">
+      <p>
+        Nothing to buy yet.<br>
+        Just leaving the door open.
+      </p>
+
+      <span class="floating-star">✦</span>
+    </article>
+
+  </section>
+
+  <!-- ✦ FOOTER -->
+  <footer class="footer">
+    <p>© 2026 Ana Jiuliani</p>
+  </footer>
+
+  <!-- ✦ STARS -->
+  <div class="stars">
+    <span>✦</span>
+    <span>✦</span>
+  </div>
 
 </body>
 </html>
