--- a/signup.html
+++ b/signup.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Sometimes I Send Notes — Ana Jiuliani</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="images/favicon.png">
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="images/favicon.png" />
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body class="signup-page">
@@ -19,9 +22,9 @@
     </p>
 
     <p class="signup-text">
-      unfinished songs, first listens,  
-      thoughts i don’t post,  
-      things that felt too quiet for anywhere else.
+      unfinished songs, first listens,<br>
+      thoughts i don’t post,<br>
+      small moments i wanted to keep.
     </p>
 
     <a
@@ -34,8 +37,10 @@
     </a>
 
     <p class="signup-foot">
-      no schedule · no pressure · you can leave anytime
+      no schedule · no pressure · leave anytime
     </p>
+
+    <span class="floating-star">✦</span>
 
     <a class="signup-back" href="index.html">
       ← back
