--- a/video.html
+++ b/video.html
@@ -1,34 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Video — Ana Jiuliani</title>
-<link rel="stylesheet" href="style.css">
-  <!-- Favicon -->
-  <link rel="icon" href="images/favicon.png">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>Video — Ana Jiuliani</title>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="images/favicon.png" />
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-<header class="masthead">
-  <h1 class="logo">Music Videos</h1>
 
-  <nav>
+  <!-- ✦ HEADER -->
+  <header class="masthead">
+    <h1 class="logo">Video</h1>
+
     <nav>
-  <a href="index.html">Home</a>
-  </nav>
-</header>
+      <a href="index.html">Home</a>
+      <a href="tracks.html">Music</a>
+      <a href="shop.html">Shop</a>
+    </nav>
+  </header>
 
-<section class="center-note">
-  <p class="handwritten">More to come.</p>
+  <!-- ✦ VIDEO SPACE -->
+  <main class="video-soft">
 
-  <a href="signup.html" class="paper-button">
-    Subscribe for updates
-  </a>
-</section>
-<footer>
-  <p>© 2026 Ana Jiuliani. All Rights Reserved.</p>
-</footer>
+    <p class="video-whisper">
+      moving pictures
+    </p>
+
+    <section class="video-empty">
+
+      <p class="video-text">
+        not here yet.<br>
+        but they will be.
+      </p>
+
+      <span class="floating-star">✦</span>
+
+      <a href="signup.html" class="video-soft-link">
+        get a note when they arrive
+      </a>
+
+    </section>
+
+  </main>
+
+  <!-- ✦ FOOTER -->
+  <footer class="footer">
+    <p>© 2026 Ana Jiuliani</p>
+  </footer>
+
+  <!-- ✦ AMBIENT STARS -->
+  <div class="stars">
+    <span>✦</span>
+    <span>✦</span>
+  </div>
+
 </body>
 </html>
