--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
   <!-- ✦ FOOTER -->
   <footer class="footer">
-    <p>© 2026 Ana Jiuliani</p>
+    <p>©2026 Ana Jiuliani. All Rights Reserved.</p>
   </footer>
 
   <!-- ✦ FLOATING STARS -->
