--- a/tracks.html
+++ b/tracks.html
@@ -17,7 +17,7 @@
 
   <!-- ✦ HEADER -->
   <header class="masthead">
-    <h1 class="logo">Tracks</h1>
+    <h1 class="logo">Music</h1>
 
     <nav>
       <a href="index.html">Home</a>
@@ -30,7 +30,7 @@
   <main class="tracks-soft">
 
     <p class="tracks-whisper">
-      songs, scattered
+      tracks
     </p>
 
     <section class="tracks-flow">
@@ -67,7 +67,7 @@
 
   <!-- ✦ FOOTER -->
   <footer class="footer">
-    <p>© 2026 Ana Jiuliani</p>
+    <p>©2026 Ana Jiuliani. All Rights Reserved.</p>
   </footer>
 
   <!-- ✦ AMBIENT STARS -->
