--- a/shop.html
+++ b/shop.html
@@ -48,7 +48,6 @@
     <article class="soft-block center">
       <p>
         Nothing to buy yet.<br>
-        Just leaving the door open.
       </p>
 
       <span class="floating-star">✦</span>
@@ -58,7 +57,7 @@
 
   <!-- ✦ FOOTER -->
   <footer class="footer">
-    <p>© 2026 Ana Jiuliani</p>
+    <p>©2026 Ana Jiuliani. All Rights Reserved.</p>
   </footer>
 
   <!-- ✦ STARS -->
