--- a/video.html
+++ b/video.html
@@ -17,7 +17,7 @@
 
   <!-- ✦ HEADER -->
   <header class="masthead">
-    <h1 class="logo">Video</h1>
+    <h1 class="logo">Music Videos</h1>
 
     <nav>
       <a href="index.html">Home</a>
@@ -36,8 +36,7 @@
     <section class="video-empty">
 
       <p class="video-text">
-        not here yet.<br>
-        but they will be.
+        stay tuned.<br>
       </p>
 
       <span class="floating-star">✦</span>
@@ -52,7 +51,7 @@
 
   <!-- ✦ FOOTER -->
   <footer class="footer">
-    <p>© 2026 Ana Jiuliani</p>
+    <p>©2026 Ana Jiuliani. All Rights Reserved</p>
   </footer>
 
   <!-- ✦ AMBIENT STARS -->
