--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="hero-text">
 
       <h2 class="release-title">
-        New Music <span class="star">✦</span>
+        New Music <span class="star"
       </h2>
 
       <a href="SMARTLINK_HERE" target="_blank" class="album-link">
