--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
   <section class="hero">
     <div class="hero-text">
 
-      <h2 class="release-title">
-        New Music <span
-      </h2>
+     <h2 class="release-title">
+  New Music <span>✦</span>
+</h2>
+
 
       <a href="SMARTLINK_HERE" target="_blank" class="album-link">
         <div class="album-wrapper">
