--- a/signup.html
+++ b/signup.html
@@ -24,7 +24,7 @@
     <p class="signup-text">
       unfinished songs, first listens,<br>
       thoughts i don’t post,<br>
-      small moments i wanted to keep.
+      small moments i don't share everywhere.
     </p>
 
     <a
@@ -33,17 +33,17 @@
       target="_blank"
       rel="noopener noreferrer"
     >
-      leave your email ✦
+      leave your email
     </a>
 
     <p class="signup-foot">
-      no schedule · no pressure · leave anytime
+     thank you!
     </p>
 
     <span class="floating-star">✦</span>
 
     <a class="signup-back" href="index.html">
-      ← back
+      ← back home
     </a>
 
   </main>
