--- a/signup.html
+++ b/signup.html
@@ -28,8 +28,7 @@
     </p>
 
     <a
-      class="signup-soft-button"
-      href="https://linktr.ee/anajiuliani?subscribe"
+       <a href="https://linktr.ee/anajiuliani?subscribe" class="soft-button"
       target="_blank"
       rel="noopener noreferrer"
     >
