--- a/signup.html
+++ b/signup.html
@@ -32,7 +32,7 @@
       target="_blank"
       rel="noopener noreferrer"
     >
-      leave your email
+      leave your email <span class="star">✦</span>
     </a>
 
     <p class="signup-foot">
