--- a/video.html
+++ b/video.html
@@ -41,8 +41,8 @@
 
       <span class="floating-star">✦</span>
 
-      <a href="signup.html" class="video-soft-link">
-        get a note when they arrive
+       <a href="signup.html" class="soft-button">
+        get a note when they arrive <span class="star">✦</span>
       </a>
 
     </section>
