--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
   <section class="columns">
 
     <article class="soft-block">
-      <h3>Right now</h3>
+      <h3>Honestly...</h3>
       <p>
-        Making things slowly.<br>
-        Letting them be what they are.
+      Stop holding back,<br>
+       We'll all die anyway.
       </p>
       <span class="floating-star">✦</span>
     </article>
