--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <a href="SMARTLINK_HERE" target="_blank" class="album-link">
         <div class="album-wrapper">
-          <img src="images/album-cover.png" alt="Album cover" class="album-cover" />
+          <img src="images/album-cover.jpg" alt="Album cover" class="album-cover" />
           <div class="album-hover">listen ✦</div>
         </div>
       </a>
