--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <!-- ✦ HEADER -->
   <header class="masthead">
-    <h1 class="logo">Ana Jiuliani</h1>
+    <h1 class="logo">AJ</h1>
 
     <nav>
       <a href="index.html">Home</a>
